[gd_scene load_steps=9 format=3 uid="uid://cultwlaoacuoe"]

[ext_resource type="Texture2D" uid="uid://sxkga6godwwl" path="res://assets/water_generator.png" id="1_i8ddh"]
[ext_resource type="Script" path="res://tomato.gd" id="1_pv5kl"]
[ext_resource type="Texture2D" uid="uid://bh4y2lgdkxrti" path="res://fonts/tomato.png" id="4_1nerr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sco5i"]
size = Vector2(145, 121)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bu6nn"]
bg_color = Color(0.686275, 0.592157, 1, 0.427451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k83re"]
bg_color = Color(0.505882, 0.505882, 0.505882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7tc32"]
bg_color = Color(0.347817, 0.347817, 0.347817, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ik74f"]
bg_color = Color(0.211765, 0.211765, 0.211765, 1)

[node name="Tomato" type="Node2D"]
script = ExtResource("1_pv5kl")

[node name="TomatoExtractor" type="Sprite2D" parent="."]
texture = ExtResource("1_i8ddh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_sco5i")

[node name="InteractionText" type="RichTextLabel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -73.0
offset_top = 40.0
offset_right = 127.0
offset_bottom = 90.0
grow_horizontal = 2
text = "Press f to interacte"

[node name="GeneratorPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 75.0
offset_top = -73.0
offset_right = 308.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bu6nn")

[node name="Button" type="Button" parent="GeneratorPanel"]
layout_mode = 0
offset_left = 23.0
offset_top = 52.0
offset_right = 110.0
offset_bottom = 77.0
theme_override_styles/normal = SubResource("StyleBoxFlat_k83re")
theme_override_styles/hover = SubResource("StyleBoxFlat_7tc32")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ik74f")
text = "Get tomato"

[node name="WaterIcon2" type="Sprite2D" parent="GeneratorPanel"]
position = Vector2(155, 63)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_1nerr")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="pressed" from="GeneratorPanel/Button" to="." method="_on_button_pressed"]
